--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+:root {
+  font-size: 10px;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+body {
+font-size: 1.6rem;
 }
 
 .logo {
@@ -39,4 +47,87 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.state-indicators {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.state-indicator {
+  --color: 20,40,100;
+  --opacity: 0.4;
+  position: relative;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  background: rgb(0,0,0);
+}
+
+.state-indicator:before {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 50%;
+  top: 0;
+  right: 0;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  background: red;
+  background: rgba(var(--color),var(--opacity));
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
+}
+
+.state-indicator:after {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 50%;
+  top: 20%;
+  right: 20%;
+  opacity: 0.5;
+  width: 30%;
+  height: 30%;
+  background: rgb(255,255,255);
+}
+
+.state-indicator.active {
+  --opacity: 1;
+}
+
+.state-indicator--loading {
+  --opacity: 1;
+  --color: 20,190,390;
+  height: 8rem;
+  width: 8rem;
+}
+
+.state-indicator--no-results {
+  --color: 250,60,40;
+}
+
+.state-indicator--results {
+  --color: 250,200,10;
+}
+
+.state-indicator--details {
+  --color: 110,250,10;
+}
+
+.state-indicator--loading.active:before {
+  animation: opacityPulse 0.6s infinite;
+}
+
+@keyframes opacityPulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
 }
