--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --dark-gray: 50,50,50;
 }
 
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -15,7 +15,7 @@ body {
   font-size: 1.6rem;
   color: rgb(0,0,0);
   background:rgb(250,250,250);
-}
+} */
 
 .logo {
   height: 6em;
@@ -65,8 +65,8 @@ body {
   --color: 20,40,100;
   --opacity: 0.4;
   position: relative;
-  height: 4rem;
-  width: 4rem;
+  height: 2rem;
+  width: 2rem;
   border-radius: 50%;
   background: rgb(0,0,0);
 }
@@ -106,8 +106,8 @@ body {
 .state-indicator--loading {
   --opacity: 1;
   --color: 20,190,390;
-  height: 8rem;
-  width: 8rem;
+  height: 4rem;
+  width: 4rem;
 }
 
 .state-indicator--no-results {
