--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=Tektur:wght@500&family=Ubuntu:wght@400;500;700&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --font-family-body: 'Ubuntu', system-ui, Helvetica, Arial, sans-serif;
+  --font-family-heading: 'Tektur', system-ui, Helvetica, Arial, sans-serif;
+  --page-width: 120rem;
+  --page-padding-mobile: var(--size-5);
+  --page-padding-desktop: var(--size-8);
+  --page-padding: var(--page-padding-mobile);
+  --color-dex-red: 163, 36, 38;
+  font-family: var(--font-family-body);
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
@@ -7,11 +15,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 10px;
-  --page-width: 120rem;
-  --page-padding-mobile: var(--size-4);
-  --page-padding-desktop: var(--size-8);
-  --page-padding: var(--page-padding-mobile);
-  --color-dex-red: 163, 36, 38;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: var(--font-family-heading);
+  font-weight: 500;
 }
 
 @media screen and (min-width: 750px) {
@@ -90,11 +98,20 @@ input:focus {
 
 /* Global classes */
 .page-width {
+  width: 100%;
   max-width: var(--page-width);
   padding-left: var(--page-padding);
   padding-right: var(--page-padding);
   margin-left: auto;
   margin-right: auto;
+}
+
+.emboss {
+  box-shadow: -0.5px -0.5px 0.5px 2px rgba(0, 0, 0, 0.2), 1.5px 1.5px 1px 1px rgba(255, 255, 255, 0.1)
+}
+
+.emboss-large {
+  box-shadow: -0.5px -0.5px 0.5px 5px rgba(0, 0, 0, 0.1), 2px 2px 3px 1px rgba(255, 255, 255, 0.3)
 }
 
 /* Main layout */
@@ -162,6 +179,8 @@ input:focus {
 .section--animal-image {
   padding-top: var(--size-6);
   padding-bottom: var(--size-6);
+  background: #212121;
+  /* margin-top: var(--size-6); */
 }
 
 .animal-image {
@@ -170,6 +189,10 @@ input:focus {
 }
 
 /* Details */
+.details-container {
+  margin-top: var(--size-8);
+}
+
 .scanline-bg {
   --color-bg-1: 30, 165, 255;
   --color-bg-2: 48, 175, 255;
@@ -186,9 +209,43 @@ input:focus {
   );
 }
 
-.details {
 
+.animal-name {
+ display: flex;
+ flex-wrap: wrap;
+ align-items: center;
+ gap: var(--size-3);
 }
+
+.animal-name__title {
+  margin: 0;
+  font-size: xx-large;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+.animal-name,
+.details {
+  margin-top: var(--size-8);
+  font-weight: 500;
+  letter-spacing: 0.05em;
+  background: rgba(0, 53, 118, 0.5);
+  padding: var(--size-4);
+  border: solid 1px rgb(72, 200, 255);
+  color: rgb(116, 205, 243);
+}
+
+.details h2 {
+  margin-top: var(--size-2);
+}
+
+/* .details:before {
+  content: "";
+  display: block;
+  width: 50%;
+  height: 2px;
+  background: rgb(32, 180, 243);
+} */
 
 .details + .details {
   margin-top: var(--size-8);
