--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -155,8 +155,23 @@ input:focus {
 }
 
 .query-form__search input {
+  position: relative;
   width: 100%;
-  font-size: 2rem;
+  font-size: 1.8rem;
+  background: rgb(211, 243, 255);
+}
+
+.query-form__search:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 10rem;
+  box-shadow: inset 0 0 10px rgb(53, 198, 255);
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
 
 .query-form__search button {
@@ -166,7 +181,7 @@ input:focus {
   right: var(--size-1);
   top: 50%;
   transform: translateY(-50%);
-  background: var(--color-blue-300);
+  background:#499dda;
   padding: 0;
   height:  var(--size-8);
   width:  var(--size-8);
@@ -256,35 +271,35 @@ input:focus {
 
 .animal-name__title {
   margin: 0;
-  font-size: xx-large;
+  /* font-size: xx-large; */
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
 
 .animal-name,
 .details {
-  margin-top: var(--size-8);
+  margin-top: var(--size-2);
   font-weight: 500;
   letter-spacing: 0.05em;
   background: rgba(0, 53, 118, 0.5);
   padding: var(--size-4);
   border: solid 1px rgb(72, 200, 255);
   color: rgb(116, 205, 243);
+  border-radius: var(--radius-sm);
 }
 
-.details h2 {
-  margin-top: var(--size-2);
+.details:last-child {
+  margin-bottom: var(--size-8);
 }
 
-/* .details:before {
-  content: "";
-  display: block;
-  width: 50%;
-  height: 2px;
-  background: rgb(32, 180, 243);
-} */
-
-.details + .details {
+.animal-name {
   margin-top: var(--size-8);
 }
 
+.details h2 {
+  margin: 0 0 var(--size-2);
+}
+
+.details p {
+  margin: var(--size-2) 0;
+}
